--- a/src/components/Svg/style.css
+++ b/src/components/Svg/style.css
@@ -1,4 +1,8 @@
 .svgIcon {
-    height: 100px;
-    width: 100px;
+    height: 75px;
+    width: 75px;
+}
+
+.iconHolder {
+    text-align: center;
 }
