--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,9 +1,22 @@
 .footer {
-    background-color: darkred;
+    background-color: rgb(19, 76, 102);
     color: white;
     padding: 50px 10px;
-    margin-top: 200px;
-    margin-bottom: 0px;
+    margin: 0px;
+}
+
+.attributer {
+    color: white;
+}
+
+.mountains {
+    margin-bottom: -30px;
+    width: 100%;
+    max-height: 300px;
+    z-index: -1;
+    position: relative;
+    border-top-left-radius: 200px;
+    border-top-right-radius: 200px;
 }
 
 .fab, .fas {
